# AlphaDice

./: .appveyor.yml  .coveragerc  .gitignore  .travis.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  Pipfile  README.md  README.rst  requirements.txt  setup.cfg  setup.py
AlphaHooks/: __main__.py  main.py  main.ui  resources.py  resources.qrc  settings.json
AlphaHooks/widgets/: __init__.py  collections.py  config.py  signals.py
AlphaHooks/widgets/console/: __init__.py  config.py  io.py  stream.py
AlphaHooks/widgets/console/display/: __init__.py  python.py
AlphaHooks/widgets/console/interpreters/: __init__.py  python.py
AlphaHooks/widgets/editor/: __init__.py  config.py  tabs.py
AlphaHooks/widgets/jupyter/: __init__.py
AlphaHooks/windows/: __init__.py  config.py  main.py
AlphaHooks/windows/settings/: config.py  root.py
DeltaHook/: __main__.py  main.py  main.ui
DeltaHook/widgets/: __init__.py  config.py  signals.py
DeltaHook/widgets/console/: __init__.py  config.py  stream.py
DeltaHook/widgets/editor/: config.py
alpha_dice/: main.py  main.ui
alpha_dice/widgets/: signals.py
alpha_dice/widgets/console/: config.py  stream.py
alpha_dice/widgets/editor/: config.py
delta_hook/: main.py  main.ui
delta_hook/widgets/: config.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat
docs/contributing/: index.rst
docs/contributing/dev-guide/: application-structure.rst  index.rst  writing-documentation.rst
tests/widgets/jupyter/: test_jupiter_widget.py
tests/windows/settings/: test_root.py
(+22 files in other folders)
