[metadata]
name = DeltaHook
summary = Hooks for libraries across languages
author = daegontaven
author-email = daegontaven@gmail.com
license = gpl3
home-page = https://github.com/daegontaven/DeltaHook
description-file = README.rst

classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3.6
    Environment :: X11 Applications :: Qt
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

packages =
    DeltaHook

[aliases]
docs = build_sphinx

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[pbr]
autodoc_tree_index_modules = True
