[metadata]
name = AlphaHooks
summary = Hooks for libraries across languages
author = daegontaven
author-email = daegontaven@gmail.com
license = gpl3
home-page = https://github.com/daegontaven/AlphaHooks
description-file = README.rst

classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3.6
    Environment :: X11 Applications :: Qt
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

packages =
    AlphaHook

install_requires=
    PyQt5
    qscintilla
    json_config
    Sphinx

[extras]
DOCS =
    sphinx_rtd_theme

[aliases]
docs = build_sphinx

[build_sphinx]
source_dir = docs
build_dir = docs/_build
